--- a/CSS/cssGenerale.css
+++ b/CSS/cssGenerale.css
@@ -1,82 +1,119 @@
 * {
-    margin: auto;
+	margin: auto;
 }
 
 html, body {
-    font-family: Verdana, Arial, Helvetica, sans-serif;
-    font-size: 100%;
-    max-width: 95%;
-    margin: auto;
-    padding: 0;
-    height: 100%;
+	font-family: Verdana, Arial, Helvetica, sans-serif;
+	font-size: 100%;
+	max-width: 95%;
+	margin: auto;
+	padding: 0;
+	height: 100%;
 }
 
 body {
-    background-color: #FAFAFA;
+	background-color: #FAFAFA;
 }
 
 .messaggio {
-    text-align: center;
-    padding: 0.5em;
-    font-size: 1.1em;
+	text-align: center;
+	padding: 0.5em;
+	font-size: 1.1em;
 }
 
 .errorMessage {
-    text-align: center;
-    padding-top: 5%;
-    font-size: 1.1em;
-    background: #C13636;
-    width: 100%;
-    color: #FFFFFF;
-    padding: 0.3em 0em 0.3em 0em;
-    margin-top: 0.1em;
-    border-radius: 6px 6px 6px 6px;
-    -moz-border-radius: 6px 6px 6px 6px;
-    -webkit-border-radius: 6px 6px 6px 6px;
+	text-align: center;
+	padding-top: 5%;
+	font-size: 1.1em;
+	background: #C13636;
+	width: 100%;
+	color: #FFFFFF;
+	padding: 0.3em 0em 0.3em 0em;
+	margin-top: 0.1em;
+	border-radius: 6px 6px 6px 6px;
+	-moz-border-radius: 6px 6px 6px 6px;
+	-webkit-border-radius: 6px 6px 6px 6px;
 }
 
 .successMessage {
-    text-align: center;
-    padding-top: 5%;
-    font-size: 1.1em;
-    background: #4CAF50;
-    width: 100%;
-    color: #FFFFFF;
-    padding: 0.3em 0em 0.3em 0em;
-    margin-top: 0.1em;
-    border-radius: 6px 6px 6px 6px;
-    -moz-border-radius: 6px 6px 6px 6px;
-    -webkit-border-radius: 6px 6px 6px 6px;
+	text-align: center;
+	padding-top: 5%;
+	font-size: 1.1em;
+	background: #4CAF50;
+	width: 100%;
+	color: #FFFFFF;
+	padding: 0.3em 0em 0.3em 0em;
+	margin-top: 0.1em;
+	border-radius: 6px 6px 6px 6px;
+	-moz-border-radius: 6px 6px 6px 6px;
+	-webkit-border-radius: 6px 6px 6px 6px;
 }
 
 /* BREADCRUMBS */
 #breadcrumb {
-    background: #F1F1F1;
-    padding: 0.5em;
-    color: #000000;
-    margin: 0.5em 0 0.5em 0;
-    border-radius: 6px 6px 6px 6px;
-    -moz-border-radius: 6px 6px 6px 6px;
-    -webkit-border-radius: 6px 6px 6px 6px;
+	background: #F1F1F1;
+	padding: 0.5em;
+	color: #000000;
+	margin: 0.5em 0 0.5em 0;
+	border-radius: 6px 6px 6px 6px;
+	-moz-border-radius: 6px 6px 6px 6px;
+	-webkit-border-radius: 6px 6px 6px 6px;
 }
 
 /* STILE DELL'HEADER */
 #header {
-    text-align: center;
-    font-size: 100%;
-    max-width: 100%;
-    margin: 0.5em;
-    border-top: 3px double #000000;
-    border-bottom: 3px double #000000;
-    overflow: auto;
+	text-align: center;
+	font-size: 100%;
+	max-width: 100%;
+	margin: 0.5em;
+	border-top: 3px double #000000;
+	border-bottom: 3px double #000000;
+	overflow: auto;
 }
 
 /* STILE DEL FOOTER */
 #footer {
-    text-align: center;
-    max-width: 100%;
-    margin: 0.5em 0;
-    border-top: 3px double #000000;
-    overflow: auto;
-    clear: both;
+	text-align: center;
+	max-width: 100%;
+	margin: 0.5em 0;
+	border-top: 3px double #000000;
+	overflow: auto;
+	clear: both;
+}
+
+input[type="text"] {
+	width: 50%;
+	height: 2em;
+}
+
+.button {
+	border: 1px solid #241d13;
+	cursor: pointer;
+	font-size: 1em;
+	font-weight: bold;
+	min-width: 2em;
+	max-width: 100%;
+	padding: 0.5em 2em;
+	border-radius: 4px;
+}
+
+.dataInput {
+	width: 25% !important;
+}
+
+
+@media (max-width:1000px) {
+	form {
+		text-align: center;
+	}
+
+	input[type="text"] {
+		width: 100%;
+		border: 1px solid;
+	}
+	input[type="submit"] {
+		margin: 0.5em;
+		border: 1px solid black;
+		font-size: 1em;
+	}
 }
