--- a/CSS/cssGenerale.css
+++ b/CSS/cssGenerale.css
@@ -23,12 +23,10 @@ body {
 
 .errorMessage {
 	text-align: center;
-	padding-top: 5%;
 	font-size: 1.1em;
 	background: #C13636;
-	width: 100%;
 	color: #FFFFFF;
-	padding: 0.3em 0em 0.3em 0em;
+	padding: 0.5em 0.5em;
 	margin-top: 0.1em;
 	border-radius: 6px 6px 6px 6px;
 	-moz-border-radius: 6px 6px 6px 6px;
@@ -37,12 +35,10 @@ body {
 
 .successMessage {
 	text-align: center;
-	padding-top: 5%;
 	font-size: 1.1em;
 	background: #4CAF50;
-	width: 100%;
 	color: #FFFFFF;
-	padding: 0.3em 0em 0.3em 0em;
+	padding: 0.5em 0.5em;
 	margin-top: 0.1em;
 	border-radius: 6px 6px 6px 6px;
 	-moz-border-radius: 6px 6px 6px 6px;
@@ -81,39 +77,41 @@ body {
 	clear: both;
 }
 
-input[type="text"] {
-	width: 50%;
-	height: 2em;
+.flexbox-parent
+{
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    
+    justify-content: flex-start; /* align items in Main Axis */
+    align-items: stretch; /* align items in Cross Axis */
+    align-content: stretch; /* Extra space in Cross Axis */
+            
 }
 
-.button {
-	border: 1px solid #241d13;
-	cursor: pointer;
-	font-size: 1em;
-	font-weight: bold;
-	min-width: 2em;
-	max-width: 100%;
-	padding: 0.5em 2em;
-	border-radius: 4px;
+.flexbox-item
+{
+    padding: 8px;
+}
+.flexbox-item-grow
+{
+    flex: 1; /* same as flex: 1 1 auto; */
 }
 
-.dataInput {
-	width: 25% !important;
+.fill-area
+{
+    display: flex;
+    flex-direction: row;
+    
+    justify-content: flex-start; /* align items in Main Axis */
+    align-items: stretch; /* align items in Cross Axis */
+    align-content: stretch; /* Extra space in Cross Axis */
+    
 }
-
-
-@media (max-width:1000px) {
-	form {
-		text-align: center;
-	}
-
-	input[type="text"] {
-		width: 100%;
-		border: 1px solid;
-	}
-	input[type="submit"] {
-		margin: 0.5em;
-		border: 1px solid black;
-		font-size: 1em;
-	}
+.fill-area-content
+{
+    /* Needed for when the area gets squished too far and there is content that can't be displayed */
+    overflow: auto; 
 }
