--- a/CSS/cssGenerale.css
+++ b/CSS/cssGenerale.css
@@ -9,6 +9,7 @@ html, body {
 	margin: auto;
 	padding: 0;
 	background-color: bisque;
+    height: 100%;
 }
 
 body {
@@ -48,12 +49,12 @@ body {
 /* BREADCRUMBS */
 #breadcrumb {
 	background: #F1F1F1;
-	padding: 0.5em;
+	padding: 0.7em;
 	color: #000000;
-	margin: 0.5em 0 0.5em 0;
 	border-radius: 6px 6px 6px 6px;
 	-moz-border-radius: 6px 6px 6px 6px;
 	-webkit-border-radius: 6px 6px 6px 6px;
+	margin: 0;
 }
 
 /* STILE DELL'HEADER */
@@ -61,7 +62,8 @@ body {
 	text-align: center;
 	font-size: 100%;
 	max-width: 100%;
-	margin: 0.5em;
+	margin: 0;
+	margin-top: 0.5em;
 	border-top: 3px double #000000;
 	border-bottom: 3px double #000000;
 	overflow: auto;
@@ -71,14 +73,14 @@ body {
 #footer {
 	text-align: center;
 	max-width: 100%;
-	margin: 0.5em 0;
 	border-top: 3px double #000000;
 	overflow: auto;
 	clear: both;
+	padding: 0.7em;
+	margin: 0;
 }
 
-.flexbox-parent
-{
+.flexbox-parent {
     width: 100%;
     height: 100%;
 
@@ -91,17 +93,15 @@ body {
             
 }
 
-.flexbox-item
-{
+.flexbox-item {
     padding: 8px;
 }
-.flexbox-item-grow
-{
+
+.flexbox-item-grow {
     flex: 1; /* same as flex: 1 1 auto; */
 }
 
-.fill-area
-{
+.fill-area {
     display: flex;
     flex-direction: row;
     
@@ -110,8 +110,8 @@ body {
     align-content: stretch; /* Extra space in Cross Axis */
     
 }
-.fill-area-content
-{
+
+.fill-area-content {
     /* Needed for when the area gets squished too far and there is content that can't be displayed */
     overflow: auto; 
 }
@@ -140,7 +140,10 @@ body {
 }
 
 .main {
-	border: 1px solid #f1ab00;
-    margin-top: 1em;
-    background-color: #f1ab00;
+	padding: 1em;
+	background-color: #f1ab00;
+}
+
+.clear{
+    clear: left;
 }
