--- a/CSS/cssAmministratore.css
+++ b/CSS/cssAmministratore.css
@@ -19,6 +19,54 @@
     padding: 0.8em;
 }
 
-.corpoAmministratore {
-    
+.formAmm select,
+.formAmm input {
+    padding: 0.3em 0.1em 0.3em 0.1em;
+    border: 1px solid grey;
+    box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.3);
+    border-radius: 2px;  
+}
+
+.formAmm label, select, input {
+    display: inline-block;
+}
+
+.formAmm label {
+    width: 30%;
+    padding: 1em 0.4em 0 0;
+    text-align: right;
+}
+
+.formAmm input[type="text"],
+.formAmm input[list="titleInput"],
+.formAmm input[type="date"],
+.formAmm input[type="email"],
+.formAmm input[type="password"],
+.formAmm input[type="number"],
+.formAmm input[type="file"],
+.formAmm input[type="submit"],
+.formAmm textarea,
+.formAmm select {
+    display: inline-block;
+    box-sizing: content-box;
+    width: 60%;
+    background-color:white;
+}
+
+.formAmm input[type="submit"] {
+    margin-top: 1em;
+    width: 40%;
+    height: 2em;
+    cursor: pointer;
+    font-weight: bold;
+    border: 1px solid #241d13;
+    border-radius: 4px;
+}
+
+.formAmm fieldset {
+    margin: 1em;
+}
+
+.testoAmm {
+    margin: 0.5em;
 }
