--- a/CSS/cssGenerale.css
+++ b/CSS/cssGenerale.css
@@ -9,41 +9,30 @@ html, body {
 	margin: auto;
 	padding: 0;
 	background-color: bisque;
-    height: 100%;
 }
 
 body {
 	background-color: #FAFAFA;
+    height: 100%;
 }
 
 .messaggio {
 	text-align: center;
-	padding: 0.5em;
 	font-size: 1.1em;
+	color: #FFFFFF;
+	padding: 0.5em 0.5em;
+	margin: 0.5em;
+	border-radius: 6px 6px 6px 6px;
+	-moz-border-radius: 6px 6px 6px 6px;
+	-webkit-border-radius: 6px 6px 6px 6px;
 }
 
 .errorMessage {
-	text-align: center;
-	font-size: 1.1em;
 	background: #C13636;
-	color: #FFFFFF;
-	padding: 0.5em 0.5em;
-	margin-top: 0.1em;
-	border-radius: 6px 6px 6px 6px;
-	-moz-border-radius: 6px 6px 6px 6px;
-	-webkit-border-radius: 6px 6px 6px 6px;
 }
 
 .successMessage {
-	text-align: center;
-	font-size: 1.1em;
 	background: #4CAF50;
-	color: #FFFFFF;
-	padding: 0.5em 0.5em;
-	margin-top: 0.1em;
-	border-radius: 6px 6px 6px 6px;
-	-moz-border-radius: 6px 6px 6px 6px;
-	-webkit-border-radius: 6px 6px 6px 6px;
 }
 
 /* BREADCRUMBS */
@@ -83,14 +72,11 @@ body {
 .flexbox-parent {
     width: 100%;
     height: 100%;
-
     display: flex;
     flex-direction: column;
-    
     justify-content: flex-start; /* align items in Main Axis */
     align-items: stretch; /* align items in Cross Axis */
     align-content: stretch; /* Extra space in Cross Axis */
-            
 }
 
 .flexbox-item {
@@ -104,11 +90,11 @@ body {
 .fill-area {
     display: flex;
     flex-direction: row;
-    
     justify-content: flex-start; /* align items in Main Axis */
     align-items: stretch; /* align items in Cross Axis */
-    align-content: stretch; /* Extra space in Cross Axis */
-    
+	align-content: stretch; /* Extra space in Cross Axis */
+	margin: 0;
+	padding: 0;
 }
 
 .fill-area-content {
