--- a/CSS/cssGenerale.css
+++ b/CSS/cssGenerale.css
@@ -62,6 +62,7 @@ body {
 	text-align: center;
 	max-width: 100%;
 	border-top: 3px double #000000;
+	border-bottom: 3px double #000000;
 	overflow: auto;
 	clear: both;
 	padding: 0.7em;
