--- a/CSS/cssVeicoli.css
+++ b/CSS/cssVeicoli.css
@@ -35,12 +35,20 @@ input {
 	height: 2em;
 }
 
-.button {
+input[type="submit"] {
 	border: 1px solid #241d13;
 	cursor: pointer;
 	font-size: 1em;
 	font-weight: bold;
 	width: 5em;
+	border-radius: 4px;
+}
+
+.button {
+	border: 1px solid #241d13;
+	cursor: pointer;
+	font-size: 1em;
+	font-weight: bold;
 	border-radius: 4px;
 }
 
@@ -63,6 +71,10 @@ input {
     margin-top: 0.5em;
     font-weight: bold;
     text-align: center;
+}
+
+#preventivoForm {
+	margin-top: 3em;
 }
 
 
