--- a/CSS/cssGenerale.css
+++ b/CSS/cssGenerale.css
@@ -136,6 +136,24 @@ body {
 }
 
 
+.button {
+	border: 1px solid #241d13;
+	cursor: pointer;
+	font-size: 1em;
+	font-weight: bold;
+	border-radius: 4px;
+}
+
+
+input[type="submit"] {
+	border: 1px solid #241d13;
+	cursor: pointer;
+	font-size: 1em;
+	font-weight: bold;
+	width: auto;
+	border-radius: 4px;
+}
+
 @media (max-width:1000px) {
 	html, body {
 		max-width: 95%;
