--- a/CSS/cssGenerale.css
+++ b/CSS/cssGenerale.css
@@ -122,8 +122,7 @@ body {
 #menu li {
 	display: inline;
 	list-style-type: none;
-	padding-left: 1.0em;
-	padding-right: 1.0em;
+	padding:0 1%;
 }
 
 .main {
