--- a/CSS/cssUtente.css
+++ b/CSS/cssUtente.css
@@ -2,6 +2,19 @@
   overflow: auto;
 }
 
+.bottoni {
+  width: 6em;
+  height: 2.5em;
+  font-weight: bolder;
+  background-color: #F1AB00;
+  color: white;
+  border: none;
+  border-radius: 5%;
+  box-shadow: 4% 5% gray;
+  display: block;
+  margin-top: 1.5em;
+}
+
 .listaMenu {
   padding: 0;
 }
