--- a/CSS/cssGenerale.css
+++ b/CSS/cssGenerale.css
@@ -15,6 +15,22 @@ body {
 	background-color: #FAFAFA;
 }
 
+.logoHeader {
+	float: left;
+	width: auto;
+	height: 2.6em;
+	height: 100%;
+	padding: 0 5% 0 5%;
+}
+
+.nomeSito {
+	font-family: Verdana, Arial, Helvetica, sans-serif;
+	font-size: 2.5em;
+	float: left;
+	font-style: italic;
+	text-align: center;
+}
+
 .messaggio {
 	text-align: center;
 	font-size: 1.1em;
