--- a/CSS/cssGenerale.css
+++ b/CSS/cssGenerale.css
@@ -233,10 +233,50 @@ input[type="submit"] {
 	display: block !important;
 }
 
+#scrollUp{
+	position: fixed; 
+	bottom: 10px; 
+	right: 10px; 
+	z-index: 99; 
+	border: none; 
+	outline: none; 
+	background-color: red; 
+	color: white; 
+	cursor: pointer; 
+	padding: 0;
+	border-radius: 2px; 
+	font-size: 1.7em;
+	padding: 0 0.3em;
+	font-weight: bolder; 
+}
+
+.hide{
+	display: none;
+}
+
 @media (max-width:1000px) {
 	html, body {
 		max-width: 95%;
 	}
+
+	#scrollUp{
+        right:2px;
+        bottom:5px;
+    }
+}
+
+@media (max-width:750px){
+    #scrollUp{
+        font-size: 1.3em;
+    }
+
+}
+
+@media (max-width:600px){
+    #scrollUp{
+        font-size: 1em;
+        padding:0 0.1em;
+    }
 }
 
 @media (max-width:550px) {
