--- a/CSS/cssUtente.css
+++ b/CSS/cssUtente.css
@@ -168,3 +168,13 @@ hr {
   list-style: none;
   text-align: center;
 }
+
+@media (max-width:700px) {
+  #nav {
+      padding: 1em;
+      display: block;
+      width: 80%;
+      height:inherit;
+      overflow: auto;
+  }
+}
