fix dopo validazione

--- a/CSS/cssAmministratore.css
+++ b/CSS/cssAmministratore.css
@@ -9,7 +9,7 @@
     float: left;
     width: 29%;
     height: 100%;
-    text-align: justify;
+    text-align: center;
     font-size: 1.1em;
     background-color: #F1AB00;
     color: #FFFFFF;
