--- a/CSS/cssGenerale.css
+++ b/CSS/cssGenerale.css
@@ -186,7 +186,7 @@ input[type="submit"] {
     color: white;
     border: none;
     border-radius: 5%;
-    box-shadow: 4% 5% gray;
+    box-shadow: 4px 5px gray;
 }
 
 /* hamburher animation */
